--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,36 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+        {
+            "name": "Attach by Process ID",
+            "processId": "${command:PickProcess}",
+            "request": "attach",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node",
+        },
+        // {
+        //     "name": "Node: Launch Program",
+        //     "program": "${workspaceFolder}/src/app.js",
+        //     "request": "launch",
+        //     "skipFiles": [
+        //         "<node_internals>/**"
+        //     ],
+        //     "args": [
+        //         "--experimental-modules",
+        //         "--es-module-specifier-resolution=node"
+        //     ],
+        //     "type": "node"
+        // },
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Typescript build",
             "program": "${relativeFile}",
             "preLaunchTask": "tsc: build - tsconfig.json",
-            "outFiles": ["${workspaceFolder}/out/**/*.js"]
+            "outFiles": ["${workspaceFolder}/src/out/**/*.js"]
         }
     ]
 }
