--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "type": "module",
   "dependencies": {
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
+    "mysql": "^2.18.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^18.7.15",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
