--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^18.7.15",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
